--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -46,13 +46,13 @@
                         <img src="{% static 'assets/img/cpp.png' %}"  alt="..." class="img-thumbnail mb-2">
                         {% endif %}
                         <div class="row justify-content-center">
-                            <a class="btn btn-primary green-btn" href="#" role="button">Click here or scan qrcode to start survey</a>
+                            <a class="btn btn-primary green-btn" href="{{link}}" role="button">Click here or scan qrcode to start survey</a>
                         </div>
                     </div>
                     <!-- edit and proceed btn -->
                     <div class="row mt-2 p-4">
                         <a class="btn btn-primary green-btn float-left" href="#" role="button">Edit </a>
-                        <a style="margin-left: auto;" class="btn btn-primary green-btn" href="#" role="button">Procced to Confirm</a>
+                        <a style="margin-left: auto;" class="btn btn-primary green-btn" href="{% url 'iframe' %}" role="button">Procced to Confirm</a>
 
                     </div>
 
