--- a/templates/form.html
+++ b/templates/form.html
@@ -10,6 +10,80 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+        #submitButton{
+            width:100%;
+            padding-top:3%;
+            padding-bottom: 3%;
+            color: black;
+            font-weight: bold;
+            background:#7ED957;
+            border: none;
+            border-radius: 0;
+            margin-top: 2%;
+            font-size: 130%;
+        }
+        /* Extra small devices (phones, 600px and down) */
+        @media only screen and (max-width: 600px) {
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 95vw;
+            }
+        }
+        /* Small devices (portrait tablets and large phones, 600px and up) */
+        @media only screen and (min-width: 600px) {
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 95vw;
+            }
+        }
+
+        /* Medium devices (landscape tablets, 768px and up) */
+        @media only screen and (min-width: 768px) {
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 80vw;
+            }
+        }
+
+        /* Large devices (laptops/desktops, 992px and up) */
+        @media only screen and (min-width: 992px) {
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 40vw;
+            }
+        }
+
+        /* Extra large devices (large laptops and desktops, 1200px and up) */
+        @media only screen and (min-width: 1200px) {
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 30vw;
+            }
+        }
+        input[type="text"], .custom-select, #provitionalTextArea {
+            background-color : #D9D9D9;
+            border-radius: 0;
+        }
+        input[type="text"]::placeholder, textarea::placeholder, input[type='text'], textarea , .custom-select, #provitionalTextArea{
+            color: black;
+            text-align: center;
+            font-weight: bold;
+        }
+        #disclaimerCheckbox{
+            margin: auto;
+            width: 40%;
+            font-weight: bold;
+        }
+        #disclaimerCheckbox>input{
+            height: 20px;
+            width: 20px;
+            border: 2px solid black;
+        }
         .form-check-input-reverse{
         margin-left: 10px;
         }
@@ -23,28 +97,29 @@
     <div class="container rounded bg-white mt-5">
         <div class="row justify-content-center">
 
-            <div class="card">
+            <div class="card" id = "cardbox">
                 <div class="card-body">
                     <form method="post" enctype="multipart/form-data">
                       {% csrf_token %}
-                        <div class="form-group">
-                          <label for="logo">Company Logo</label><br>
-                          <img id="companyLogo" src="https://demo.themesberg.com/volt/assets/img/profile-cover.jpg" height="200px" width="150px" alt="..." class="img-thumbnail mb-2">
-                          <div class="custom-file">
+                        <div class="form-group pt-3">
+{#                          <label for="logo">Company Logo</label><br>#}
+{#                          <img id="companyLogo" src="https://demo.themesberg.com/volt/assets/img/profile-cover.jpg" height="200px" width="150px" alt="..." class="img-thumbnail mb-2">#}
+                            <div style="cursor: pointer;margin:auto;padding:10px;width: 100px;height:100px;border: 5px solid #D5DCE2;border-radius: 15px;" onclick="clickUploadFile()">
+                                <p style="text-align: justify;font-weight: bold"><b>Upload Photo/ Logo</b></p>
+                            </div>
+                          <div class="custom-file" style="display: none">
                             <input type="file" name="logo" class="custom-file-input" id="customFile">
                             <label class="custom-file-label" for="customFile">Choose file</label>
                           </div>
                           
                         </div>
                         <div class="form-group">
-                          <label>Brand Name</label>
-                          <input type="text" name="brand_name" class="form-control" placeholder="Enter your brand name">
+                          <input type="text" name="brand_name" class="form-control" style="color: black" placeholder="Enter your brand name">
                         </div>
                         
                         <div class="form-group">
-                            <label>Select Product Service</label>
                             <select class="custom-select" name="service" required>
-                                <option selected value="">Open this select menu</option>
+                                <option selected value="">Select your Product/Service &nbsp&nbsp&nbsp</option>
                                 <option value="one">One</option>
                                 <option value="two">Two</option>
                                 <option value="three">Three</option>
@@ -52,14 +127,12 @@
                         </div>
 
                         <div class="form-group">
-                            <label>Link to survey form</label>
-                            <input type="text" name="url" class="form-control" placeholder="Enter url link">
+                            <input type="text" name="url" class="form-control" style="color: black" placeholder="Enter link to survey form">
                         </div>
 
                         <div class="form-group">
-                            <label>Survey Location</label>
                             <select class="custom-select" required name="location">
-                                <option selected value="">Open this select menu</option>
+                                <option selected value="">Select the survey location</option>
                                 <option value="one">One</option>
                                 <option value="two">Two</option>
                                 <option value="three">Three</option>
@@ -67,16 +140,17 @@
                         </div>
 
                         <div class="form-group">
-                            <label>Promotional Sentence</label>
-                            <textarea class="form-control" name="promotional_sentence"></textarea>
+                            <textarea placeholder="Enter a promotional sentence to attract participants (15 words)" id = "provitionalTextArea" class="form-control" name="promotional_sentence"></textarea>
                         </div>
 
 
-                        <div class="form-check">
-                            <label class="form-check-label" for="exampleCheck1">Disclaimer</label>
+                        <div id="disclaimerCheckbox" class="form-check">
+                            <label class="form-check-label" for="exampleCheck1"><u>Disclaimer</u></label>
                             <input type="checkbox" class="form-check-input-reverse" id="exampleCheck1">
                           </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <div>
+                            <button id = "submitButton" type="submit" class="btn btn-primary"><u>Create Survey Campaign</u></button>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -102,6 +176,9 @@
       })
      
     })
+    function clickUploadFile() {
+            document.getElementById("customFile").click()
+    }
     </script>
 
   </body>
