--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -10,6 +10,194 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+        /*modal styles*/
+        .modal {
+          display: none; /* Hidden by default */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Sit on top */
+          padding-top: 100px; /* Location of the box */
+          left: 0;
+          top: 0;
+          width: 100%; /* Full width */
+          height: 100%; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+          background-color: #fefefe;
+          margin: auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+          color: black;
+          float: right;
+          font-size: 35px;
+          font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+          color: #000;
+          text-decoration: none;
+          cursor: pointer;
+        }
+
+
+        #submitButton{
+            width:100%;
+            padding-top:1%;
+            padding-bottom: 1%;
+            color: white;
+            font-weight: bold;
+            width: 80%;
+            background:#7ED957;
+            border: none;
+            border-radius: 0;
+            margin: 2% 5% 5%;
+        }
+        #otherButtons{
+            text-decoration: underline;
+            height: 60px;
+            width: 120px;
+            color: white;
+            font-weight: bold;
+            background:#7ED957;
+            border: none;
+            border-radius: 0;
+        }
+        #modalBox{
+            margin: auto;
+            padding: 3%;
+            border: 10px solid #D5DCE2;
+            border-radius: 25px;
+        }
+        @media only screen and (max-width: 600px) {
+            #modalBox{
+                width: 60vw;
+            }
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 95vw;
+            }
+            #otherbuttonsid1{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:none;
+            }
+            #otherbuttonsid2{
+                width: 50%;
+                margin-right: auto;
+                margin-left: auto;
+                display:flex;
+            }
+        }
+        /* Small devices (portrait tablets and large phones, 600px and up) */
+        @media only screen and (min-width: 600px) {
+            #modalBox{
+                width: 60vw;
+            }
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 95vw;
+            }
+
+            #otherbuttonsid1{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:none;
+            }
+            #otherbuttonsid2{
+                width: 50%;
+                margin-right: auto;
+                margin-left: auto;
+                display:flex;
+            }
+        }
+
+        /* Medium devices (landscape tablets, 768px and up) */
+        @media only screen and (min-width: 768px) {
+            #modalBox{
+                width: 40vw;
+            }
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 80vw;
+            }
+
+            #otherbuttonsid1{
+                width: 70%;
+                margin-right: auto;
+                margin-left: auto;
+                display:flex;
+            }
+            #otherbuttonsid2{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:none;
+            }
+        }
+
+        /* Large devices (laptops/desktops, 992px and up) */
+        @media only screen and (min-width: 992px) {
+            #modalBox{
+                width: 40vw;
+            }
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 40vw;
+            }
+            #otherbuttonsid1{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:flex;
+            }
+            #otherbuttonsid2{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:none;
+            }
+        }
+
+        /* Extra large devices (large laptops and desktops, 1200px and up) */
+        @media only screen and (min-width: 1200px) {
+            #modalBox{
+                width: 30vw;
+            }
+            #cardbox{
+                border: 10px solid #D5DCE2;
+                border-radius: 25px;
+                width: 30vw;
+            }
+            #otherbuttonsid1{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:flex;
+            }
+            #otherbuttonsid2{
+                width: 98%;
+                margin-right: auto;
+                margin-left: auto;
+                display:none;
+            }
+        }
+
         .form-check-input-reverse{
         margin-left: 10px;
         }
@@ -20,16 +208,25 @@
         border: 0;
         }
         .card-body{
-            border: 5px solid gray;
             border-radius: 5px;
         }
         .card-body > .card-body{
-            border: 5px solid green;
+            border: 10px solid #7ED957;
             border-radius: 2px;
         }
 
         .green-btn{
             background-color: greenyellow;
+        }
+
+        input[type="text"]::placeholder{
+            color:black;
+            text-align: center;
+            font-weight: bold;
+        }
+        input[type="text"]{
+            margin: 2%;
+            background: #D9D9D9;
         }
     </style>
     <title>Do well</title>
@@ -37,23 +234,39 @@
   <body>
     <div class="container rounded bg-white mt-5">
         <div class="row justify-content-center">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-body">
+            <div class="card" id = "cardbox">
+                <div class="card-body" style="border: none">
+                    <div style="margin-left:4%; margin-right: 4%; font-weight: bold; text-align: center">
+                    <p><b>Preview of the survey invitation in uxlivinglab page</b></p>
+                    </div>
+                    <div class="card-body" style="margin:8%; padding:0">
                         {% if qrcode %}
                         <img src="{{qrcode}}"  alt="..." class="img-thumbnail mb-2">
                         {% else %}
                         <img src="{% static 'assets/img/cpp.png' %}"  alt="..." class="img-thumbnail mb-2">
                         {% endif %}
+
+                        <div style="background: #C5EF9D">
+                            <div style="width: 40%"></div>
+                            <div style="width: 60%; margin-left: auto">
+                                <span>How do you feel about &lt;Apple&gt; &lt;Coffee&gt; in today's breakfast?</span>
+                            </div>
+                        </div>
+
                         <div class="row justify-content-center">
-                            <a class="btn btn-primary green-btn" href="{{link}}" role="button">Click here or scan qrcode to start survey</a>
+                            <button id = "submitButton" onclick="window.location.href='{{link}}'"><u style="margin-left: 8%; cursor: pointer">Click here or scan qrcode to start survey</u></button>
                         </div>
                     </div>
                     <!-- edit and proceed btn -->
-                    <div class="row mt-2 p-4">
-                        <a class="btn btn-primary green-btn float-left" href="#" role="button">Edit </a>
-                        <a style="margin-left: auto;" class="btn btn-primary green-btn" href="{% url 'iframe' %}" role="button">Procced to Confirm</a>
 
+                    <div id = "otherbuttonsid1" class="row mt-2 p-4" >
+                        <a id="otherButtons" class="btn btn-primary green-btn float-left" href="#" role="button"><span>Edit</span> </a>
+                        <a id="otherButtons" name="proceedToConfirm1" style="margin-left: auto;" class="btn btn-primary green-btn" role="button">Proceed to<br> Confirm</a>
+                    </div>
+
+                    <div id="otherbuttonsid2" class="row mt-2 p-4" >
+                        <a id="otherButtons" style="width: 100%; margin-top:1%;" class="btn btn-primary green-btn float-left" href="#" role="button"><span>Edit</span> </a>
+                        <a id="otherButtons" name="proceedToConfirm2" style="width: 100%; margin-top:10%;" class="btn btn-primary green-btn" role="button">Proceed to<br> Confirm</a>
                     </div>
 
                     
@@ -63,6 +276,72 @@
             
         </div>
     </div>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+          <div id = "modalBox">
+              <div>
+                  <span class="close">&times;</span>
+              </div>
+              <div>
+                  <p><b><br><br>
+                      The next step is confirmation of your email, click the confirmation link
+                      received in your email after submitting this form.<br><br>
+                      We will intimate you within 24 hours after email confirmation about the campaign
+                      approval. Then you can start and stop the campaign. check your data continuously for updates.<br><br>
+                      We will update you with periodic reports on the progress of the campaign.
+                  </b></p>
+              </div>
+              <div style="text-align: center">
+              <form>
+                  <input type="checkbox" style="transform: scale(2);margin: 2%" required><label for="scales"><b><u>Privacy Policy</u></b></label>
+                  <br><input style="width: 80%" type="text" placeholder="Your Name">
+                  <input type="text" style="width: 80%" placeholder="Your Email">
+              </form>
+                  <div style="margin-top: 5%; ">
+                      <a name = "cancelButton" id="otherButtons" style="cursor: pointer;padding: 3% 5%; height: 50px; width: 100px"><u>Back</u></a>
+                      <a id="otherButtons" href="{% url 'iframe' %}" style="cursor: pointer;padding: 3% 5%; height: 50px; width: 100px"><u>Submit</u></a>
+                  </div>
+              </div>
+
+          </div>
+      </div>
+    </div>
+
+    <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn1 = document.getElementsByName("proceedToConfirm1")[0];
+    var btn2 = document.getElementsByName("proceedToConfirm2")[0];
+    var cancelButton = document.getElementsByName("cancelButton")[0];
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the button, open the modal
+    btn2.onclick = function() {
+      modal.style.display = "block";
+    }
+    btn1.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    cancelButton.onclick = function () {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+    </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
