selected logo is shown and iframe page is finalized

--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -156,7 +156,7 @@
                 width: 40vw;
             }
             #cardbox{
-                border: 10px solid #D5DCE2;
+                border: 10px solid ;
                 border-radius: 25px;
                 width: 40vw;
             }
