--- a/templates/form.html
+++ b/templates/form.html
@@ -9,7 +9,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+
+      <style>
         #submitButton{
             width:100%;
             padding-top:3%;
@@ -102,11 +104,13 @@
                     <form method="post" enctype="multipart/form-data">
                       {% csrf_token %}
                         <div class="form-group pt-3">
-{#                          <label for="logo">Company Logo</label><br>#}
-{#                          <img id="companyLogo" src="https://demo.themesberg.com/volt/assets/img/profile-cover.jpg" height="200px" width="150px" alt="..." class="img-thumbnail mb-2">#}
-                            <div style="cursor: pointer;margin:auto;padding:10px;width: 100px;height:100px;border: 5px solid #D5DCE2;border-radius: 15px;" onclick="clickUploadFile()">
-                                <p style="text-align: justify;font-weight: bold"><b>Upload Photo/ Logo</b></p>
+
+                            <div id="selectLogoButtonDiv" style="cursor: pointer;margin:auto;padding:10px;width: 100px;height:100px;border: 5px solid #D5DCE2;border-radius: 15px;" onclick="clickUploadFile()">
+                                <p id="uploadImageText" style="text-align: justify;font-weight: bold"><b>Upload Photo/ Logo</b></p>
+                                <img src="#" id="imageIdforLogo" style="width: 70px;height: 70px;display: none">
                             </div>
+
+
                             <div id = "errorBar" style="width: 100%;display: none">
                                 <p style="margin: auto; background: red; text-align: center">Please Attach Photo/Logo</p>
                             </div>
@@ -171,9 +175,12 @@
     $(function(){
 
       $('#customFile').change(function(){
+          console.log("123123123");
         const [file] = customFile.files
           if (file) {
-            companyLogo.src = URL.createObjectURL(file)
+              document.getElementById("uploadImageText").style.display = 'none';
+              document.getElementById("imageIdforLogo").style.display = 'block';
+            document.getElementById("imageIdforLogo").src = URL.createObjectURL(file)
           }
       })
      
