--- a/templates/iframe.html
+++ b/templates/iframe.html
@@ -10,34 +10,27 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-        .form-check-input-reverse{
-        margin-left: 10px;
+        #iframeDivId{
+            border: 10px solid #D5DCE2;
+            border-radius: 25px;
+            padding: 10px;
         }
-        .form-check{
-            padding: 0%;
-        }
-        .img-thumbnail {
-        border: 0;
-        }
-        .card-body{
-            border: 5px solid gray;
-            border-radius: 5px;
-        }
-        .card-body > .card-body{
-            border: 5px solid green;
-            border-radius: 2px;
-        }
-
-        .green-btn{
-            background-color: greenyellow;
+        a{
+            color:red;
+            font-weight: bold;
+            font-size: 20px;
         }
     </style>
     <title>Do well</title>
   </head>
   <body>
     <div class="container rounded bg-white mt-5">
-        <div class="row">
+        <div class="row" id="iframeDivId">
             <iframe src="{{url_link}}" height="450px" width="100%"></iframe>
+        </div>
+        <div style="width: 70vw; margin: 30px auto auto; text-align: center">
+            <a href="{{url_link}}">Start</a>
+            <a style="margin-left: 50vw;" href="/">Stop</a>
         </div>
     </div>
 
