pass qr code id

--- a/templates/qrcode/create_qr_code.html
+++ b/templates/qrcode/create_qr_code.html
@@ -52,7 +52,7 @@
                 </section>
                 <div class="qr_buttons flex padding_center">
                     <span><button id="qr_edit">Edit</button></span>
-                    <span><a href="{% url 'set_survey_date' %}" id="qr_timeline">Set Survey timeline</a></span>
+                    <span><a href="{% url 'set_survey_date' pk %}" id="qr_timeline">Set Survey timeline</a></span>
                 </div>
             </div>
         </main>
