--- a/templates/qrcode/survey_date.html
+++ b/templates/qrcode/survey_date.html
@@ -63,7 +63,7 @@
                                 </button>
                             </div>
                             <div class="form_control_date__submit__btn padding_center flex">
-                                <a href="create_qr_code_form.html" type="submit" id="survey__date__submit__btn">
+                                <a href="{% url 'create_qr_code_form' qr_code.pk %}" type="submit" id="survey__date__submit__btn">
                                     Proceed
                                 </a>
                             </div>
