--- a/templates/iframe.html
+++ b/templates/iframe.html
@@ -1,43 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-      {% load static %}
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>iframe</title>
     <style>
-        #iframeDivId{
-            border: 10px solid #D5DCE2;
-            border-radius: 25px;
-            padding: 10px;
-        }
-        a{
-            color:red;
-            font-weight: bold;
-            font-size: 20px;
-        }
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+      main {
+        display: flex;
+        height: 98vh;
+        justify-content: center;
+        align-items: center;
+      }
+      .iframe {
+        height: 85%;
+        border-radius: 30px;
+      }
+      iframe {
+        border-radius: 10px;
+        outline: 0;
+        border: 0;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      }
+      .iframe__btn {
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 8%;
+      }
+      .iframe__btn button {
+        background-color: #ffb388;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+        padding: 13px;
+        min-width: 140px;
+        outline: 0;
+        border: 0;
+        color: #fff;
+      }
     </style>
-    <title>Do well</title>
   </head>
   <body>
-    <div class="container rounded bg-white mt-5">
-        <div class="row" id="iframeDivId">
-            <iframe src="{{url_link}}" height="450px" width="100%"></iframe>
+    <main>
+      <section class="iframe">
+        <iframe
+          src="{{ url_link }}"
+          title="work status form"
+          width="350"
+          height="100%"
+        >
+        </iframe>
+        <div class="iframe__btn">
+          <button>End survey</button>
         </div>
-        <div style="width: 70vw; margin: 30px auto auto; text-align: center">
-            <a href="{{url_link}}">Start</a>
-            <a style="margin-left: 50vw;" href="/">Stop</a>
-        </div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      </section>
+    </main>
   </body>
 </html>
